avatar position fix on mobile

--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -70,6 +70,7 @@
     width: 35px;
     margin: 0px 0px -6px 15px;
     position: absolute;
+    left: 0em;
   }
 }
 
